syntax = "proto3";

package app.user.v1;


message UserRequest{
  int32 id = 1;
}

message User{
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  string sex = 4;
}


service  UserService{
  rpc GetUserInfo (UserRequest) returns (User){}
}